added Antora documentation (in progress)

--- a/docs/antora/modules/ROOT/pages/mapping-creation-method.adoc
+++ b/docs/antora/modules/ROOT/pages/mapping-creation-method.adoc
@@ -106,7 +106,8 @@ During the initial phase of our mapping creation process we started out writing 
 
 Since this step is optional, we will not describe in detail the individual issues that need to be worked on, but they are in principle the same as the ones described in the next section.
 
-#### Write RML rules (or convert YARRRML rules to RML)
+[#_write_rml_rules]
+#### Write RML rules
 If in the previous step we have defined the mapping rules in YARRRML, then this step consists of the simple action of executing link:cli-toolchain.adoc[the tool that generates RML out of YARRRML].
 
 Regardless of which file we chose to define manually, the YARRRML or the RML, at the end of this step we will need to have an RML mapping file that should be able to convert an XML notice into a corresponding RDF graph.
@@ -240,8 +241,8 @@ A join condition is represented by a resource that has exactly one value for eac
 
 TODO: Ask Ibrahim to help provide some items and text snippets about the various technical mapping aspects that are challenging, interesting, or where multiple solutions were possible and certain design decisions have been taken, for example, the generation of UUID, using external files for controlled values, handling repeatable/nested tags, etc.
 
-### Document technical and philosophical issues and create tasks to find solutions for them
+### Document technical and philosophical issues
 
 While writing the mapping rules, make sure to document any issues that you are not able to solve, or that raise interesting questions, in the https://docs.google.com/document/d/1nnvD6XXYPSDzv_VukDHswzYKd_-PDUMe7E-kUGHNcc8/edit?usp=sharing[Observations/Questions about mapping generation] Google doc. If warranted, a Jira task should be also created to address the given issue.
 
-Problems that were successfully resolved should be integrated in this guide, as recommendations, e.g. in one of the above sections, and marked as [SOLVED] in the document. Unless the problem turns out to be fairly trivial, or there is only one obvious solution to it, it would be recommended NOT to delete the issue from the “Problem description” document, so that we can keep track of the different issues, and the thinking that went into choosing certain solutions.
+Problems that were successfully resolved should be integrated in this guide, as recommendations, e.g. in one of the above sections, and marked as [SOLVED] in the document. Unless the problem turns out to be fairly trivial, or there is only one obvious solution to it. It would be recommended NOT to delete the issue from the “Problem description” document, so that we can keep track of the different issues, and the thinking that went into choosing certain solutions.
