--- a/docs/antora/modules/ROOT/pages/mapping-suite-structure.adoc
+++ b/docs/antora/modules/ROOT/pages/mapping-suite-structure.adoc
@@ -127,6 +127,7 @@ After the “execution” of a mapping, the mapping package will be further enri
 	/test_data
 		notice_file1.xml
 		notice_file2.xml
+        notice_file3.xml
 		*.xml
 ```
 
