--- a/docs/antora/modules/ROOT/pages/conceptual-mapping-structure.adoc
+++ b/docs/antora/modules/ROOT/pages/conceptual-mapping-structure.adoc
@@ -1,5 +1,5 @@
 [#_conceptual-mapping-structure]
-## Conceptual mapping structure
+== Conceptual mapping structure
 
 In this section we describe the structure of the mapping file that we aim to create as the result of the described mapping process. The mapping file is an Excel workbook containing multiple worksheets. This workbook is generated from a Google Sheets document, where it can be prepared, revised, and refined by multiple contributors in a collaborative fashion. The template for this spreadsheet is provided https://docs.google.com/spreadsheets/d/1iSk02YD7lfPByKnBDU4Z2XiBjY6zCqMP79uyydiQxxU/edit#gid=0[here]. This template informs software developers and knowledge engineers alike about what should be the content of such a mapping file.
 
