--- a/docs/antora/modules/ROOT/pages/index.adoc
+++ b/docs/antora/modules/ROOT/pages/index.adoc
@@ -1,2 +1,7 @@
-# TED-SWS-ARTEFACTS Project documentation
+= TED-SWS artefacts documentation
 
+The https://github.com/meaningfy-ws/ted-sws-artefacts[TED-SWS artefacts] are mainly the transformation rules needed by the https://github.com/meaningfy-ws/ted-sws[TED-SWS system]. These transformation rules written in https://rml.io/specs/rml/[RML] are mapping the https://op.europa.eu/en/web/eu-vocabularies/e-procurement/tedschemas[XML structure] of TED https://simap.ted.europa.eu/web/simap/standard-forms-for-public-procurement[standard forms] notices and are organised in xref:mapping-suite-structure.adoc[mapping suites].
+
+Also, xref:preparing-test-data.adoc[carefully selected sample data] are available for testing the mapping correctness and completeness.
+
+To implement the mapping suite xref:methodology.adoc[a methodology] has been established.
