--- a/docs/antora/modules/ROOT/pages/key-elements-for-mapping.adoc
+++ b/docs/antora/modules/ROOT/pages/key-elements-for-mapping.adoc
@@ -1,15 +1,15 @@
 
-##  Key elements involved in the mapping process
+==  Key elements involved in the mapping process
 In this section we will provide descriptions and references to the key elements (concepts or resources) that are involved in the creation of mappings or the mapping process itself.
 
 
-### Notices to be mapped
+=== Notices to be mapped
 
 The input for the transformation process is *are XML files* that contain TED notice data. These data are structured according to the https://simap.ted.europa.eu/web/simap/standard-forms-for-public-procurement[“Standard Forms”]  published by the European Commission. There are 23 standard forms defined (numbered 1-8, 12-25, T1 and T2), whose PDF versions can be found here: https://simap.ted.europa.eu/standard-forms-for-public-procurement[https://simap.ted.europa.eu/standard-forms-for-public-procurement].
 
 The XML files need to conform to the official TED XML format defined by https://op.europa.eu/en/web/eu-vocabularies/e-procurement/tedschemas[TED XML Schema] (XSD). Over the years, multiple versions of this TED XML Schema were released, and there is a significant amount of XML data published that conform to these various versions. The latest XML notices are conformant to the https://op.europa.eu/en/web/eu-vocabularies/e-procurement/tedschemas[*versions R2.0.8 (more precisely R2.0.8.S05.E01_002-20201027 - in case of forms 16-19) and R2.0.9 (more precisely R2.0.9.S05 - for all the other forms)]* of the TED XML Schema.
 
-### Considererd resources
+=== Considererd resources
 
 To create these mappings, we rely on a number of different resources that were produced by earlier or currently running projects that aim to provide solutions in the TED landscape. The following table contains a non-comprehensive enumeration of these resources, with their short descriptions and links to where they can be found. This table is provided as a quick reference only. More detailed description of the key resources can be found in a dedicated section below.
 
@@ -32,7 +32,7 @@ To create these mappings, we rely on a number of different resources that were p
 |===
 
 
-### Transformation output
+=== Transformation output
 
 The output of the XML notice transformation will be an *RDF graph* instantiating the https://docs.ted.europa.eu/EPO/dev/index.html[eProcurement Ontology], containing a number of RDF triples where the subjects, predicates and objects of the triples are either:
 
@@ -40,9 +40,9 @@ The output of the XML notice transformation will be an *RDF graph* instantiating
 * *IRIs* representing *controlled vocabulary terms* or *entities in the ePO ontology*;
 * *Literals* representing numbers, boolean values, or strings. The string values are often encoded as multilingual strings of type +rdf:langString+., to enable the representation of textual values in multiple European languages.
 
-### Mapping files produced
+=== Mapping files produced
 
-The key element enabling transformation automation are the mapping files: *conceptual* and *technical* mappings. They are developed according to the link:mapping-creation-method.adoc[mapping creation methodology].
+The key element enabling transformation automation are the mapping files: *conceptual* and *technical* mappings. They are developed according to the xref:mapping-creation-method.adoc[mapping creation methodology].
 
-The mappings rules are organised in mapping suites, described link:mapping-suite-structure.adoc[here].
+The mappings rules are organised in mapping suites, described xref:mapping-suite-structure.adoc[here].
 
