--- a/docs/antora/modules/ROOT/pages/mapping-lifecycle.adoc
+++ b/docs/antora/modules/ROOT/pages/mapping-lifecycle.adoc
@@ -1,5 +1,5 @@
 [#_mapping-lifecycle-chaper]
-## Mapping development lifecycle
+== Mapping development lifecycle
 
 The purpose of this section is to provide a high-level overview of the mapping development lifecycle before the mapping suites are ready to be used for transformation in production settings.
 
@@ -14,7 +14,7 @@ The process starts by **deciding which notice type to map**. The notice classifi
 
 Once the target form is selected, **a set of representative shall be selected** in order to serve as a test set for the developed mapping.
 
-The notice classification scheme is usually subject to regulations and described in multiple forms starting from PDF documents, XSD schemes, and other documents. All possible documentation and modelling artefacts are **analysed in order to produce a conceptual mapping** (see link:conceptual-mapping-structure.adoc[conceptual mapping structure] ). This artefact, stored as a workbook, establishes the correspondence of the TED notice fields, to XPath expressions and to EPO structures.
+The notice classification scheme is usually subject to regulations and described in multiple forms starting from PDF documents, XSD schemes, and other documents. All possible documentation and modelling artefacts are **analysed in order to produce a conceptual mapping** (see xref:conceptual-mapping-structure.adoc[conceptual mapping structure] ). This artefact, stored as a workbook, establishes the correspondence of the TED notice fields, to XPath expressions and to EPO structures.
 
 Once the conceptual mapping is established between the XPath expressions and ontology structures, **a corresponding technical mapping is implemented**. This technical mapping consists of a set of mapping rules expressed in https://rml.io/specs/rml/[RDF Mapping Language (RML)] and it represents a translation of the conceptual mapping into a formal language which can be automatically executed by a transformation engine, such as https://github.com/RMLio/rmlmapper-java[RMLMapper].
 
