--- a/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
+++ b/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
@@ -1,6 +1,6 @@
-####  Prepare test data
+== Representative sample data selection
 
-#### Sample TED notices from 2021
+== Sample TED notices from 2021
 This data sample contains carefully selected TED notices based on the following criteria: maximise representativeness, minimise the number of selected documents. The selected notices are guaranteed to cove all possible XPath configurations available in the data.
 
 * The current sampling exercise was performed on all records collected in 2021;
@@ -10,10 +10,10 @@ This data sample contains carefully selected TED notices based on the following 
 * The minimal set of the most representative notices have been selected for each form_number and eforms_subtype .
 
 
-#### Sampling result statistics
+=== Sampling result statistics
 Below we present two tables with statistics indicating the total number for each slection criteria, the percentage relative to teh total number of considererd notices (i.e. total in 2021), and the number of selected most representative notices.
 
-##### Sampling based on form_number:
+==== Sampling based on form_number:
 
 |===
 |*form_number*|*nr. notices*|*percent ration from total number*|*nr. of the most representative notices*
@@ -43,7 +43,7 @@ Below we present two tables with statistics indicating the total number for each
 |*Total*|*668381*||*365*
 |===
 
-###### Sampling based on eforms_subtype:
+==== Sampling based on eforms_subtype:
 
 
 |===
