--- a/docs/antora/modules/ROOT/pages/mapping-creation-method.adoc
+++ b/docs/antora/modules/ROOT/pages/mapping-creation-method.adoc
@@ -1,8 +1,8 @@
-## Mapping development methodology
+== Mapping development methodology
 
 The purpose of this section is to give a high-level overview of the process that we follow to create the mapping rules that are used to transform TED notices available as XML files into RDF triples that use ePO terms.
 
-The methodology that we describe here, focuses on a few steps and artefacts that are at the core of the diagram depicted in <<mapping-creation>>. This diagram shows only a part of the link:mapping-lifecycle.adoc#mapping-lifecycle[mapping lifecycle].
+The methodology that we describe here, focuses on a few steps and artefacts that are at the core of the diagram depicted in <<mapping-creation>>. This diagram shows only a part of the xref:mapping-lifecycle.adoc#mapping-lifecycle[mapping lifecycle].
 
 [#mapping-creation]
 .Mapping creation steps in the development lifecycle
@@ -40,11 +40,11 @@ The focus here is on describing the steps how the *conceptual mapping* and the *
 
 Next we provide more detailed descriptions of steps in more detail.
 
-### Steps involved in the conceptual mapping process
+=== Steps involved in the conceptual mapping process
 
 The conceptual mapping (see structure description here ) is the first artefact that must be created. It requires a thorough understanding of the content of a given form, and all the related concepts in the ePO ontology. It will likely involve several rounds of discussions with people who have deep knowledge in these areas, to ensure that the conceptual mapping is done right. Below we look at certain sub-steps involved in developing the conceptual mapping.
 
-#### Identify the Form Elements (and the Corresponding XML Elements and XPaths) to be Mapped
+==== Identify the Form Elements (and the Corresponding XML Elements and XPaths) to be Mapped
 
 To identify the XML elements that contain information to be mapped to RDF we look at:
 
@@ -53,17 +53,17 @@ To identify the XML elements that contain information to be mapped to RDF we loo
 * The *PDF form* that we are trying to map, to make sure that all the elements are covered and the correct semantic of the fields has been identified
 Individual XML notices available in our test data set, as well as data extracted from these sample notices and compiled in tables to provide an overview of the different values that are contained in the test regarding a certain field.
 
-#### Identify eForm Business Terms (BT) corresponding to the XML elements (optional)
+==== Identify eForm Business Terms (BT) corresponding to the XML elements (optional)
 Although this is not necessary for the conversion of the Standard Form XML to RDF data, from a future-oriented perspective it is still useful to identify the eForm Business Terms corresponding to each Standard Form element. This should be pretty straight forward by looking at the “Standard Forms to eForms” mapping table.
 
-#### Identify ePO terms (classes and relations) that correspond to XML elements and their relationships
+==== Identify ePO terms (classes and relations) that correspond to XML elements and their relationships
 Basically, in this step, we need to identify the appropriate classes, class attributes, and relationships between the ePO classes that can be used to represent the information contained in the various XML elements. This requires a deep understanding of the ePO model.
 
 Identifying the relevant ePO terms might not be very straightforward in some cases, as there is quite a significant difference between the conceptualisation and abstractisations made in the two models, and we can often encounter situations where even the names used for the same concept might differ significantly in the two models. Therefore, in this step it is *highly recommended* to consult with people who have a high level of knowledge of the structure and content of the ePO model.
 
 Make sure to *document* any problems and discrepancies that we discover, which prevents the creation of a perfect (one-to-one) mapping. This documentation should happen both on the spreadsheet (e.g. by highlighting problematic cells in certain colours and/or adding comments to them), but also by describing issues in a separate, dedicated, document that can be reviewed and addressed by ePO experts. For more on the documentation process see section below.
 
-#### Identify value sets in XML
+==== Identify value sets in XML
 
 To identify the value sets (i.e. the possible different values) that are used in the XML data, either as certain element names, or attribute values), we need to look at:
 
@@ -72,43 +72,43 @@ To identify the value sets (i.e. the possible different values) that are used in
 * The *PDF form* that we are trying to map, to see if the form specifies an obvious value set, e.g. by means of checkboxes or radio buttons.
 * Consult the authority tables used in the EPO available from the https://op.europa.eu/en/web/eu-vocabularies/authority-tables[EU Vocabularies]
 
-#### Identify value sets in ePO and in other vocabularies, corresponding to XML controlled values used in the XML files
+==== Identify value sets in ePO and in other vocabularies, corresponding to XML controlled values used in the XML files
 
 For this step we should identify the different vocabularies that are referenced by ePO attributes and relationships that are involved in the mapping of a certain XML element, and we should gain some familiarity with that vocabulary. At minimum we should know what namespace they are using and what are some of the values and how are they encoded (i.e. which properties they are using to encode labels, ids, etc).
 
-#### Write Turtle fragments that provide a template for the triples that should be generated, and which can be used in the RML mapping rules
+==== Write Turtle fragments that provide a template for the triples that should be generated, and which can be used in the RML mapping rules
 
 TODO
 
-#### Identify and document problems/issue/questions to be clarified with external experts
+==== Identify and document problems/issue/questions to be clarified with external experts
 
 TODO
 
-### Steps involved in the technical mapping process
+=== Steps involved in the technical mapping process
 
 In this section we will describe certain aspects that need to be addressed in the “technical mapping” step of the mapping creation process.
 
-#### Identify the sources that are necessary to execute a mapping
+==== Identify the sources that are necessary to execute a mapping
 
 This step is about making sure that all necessary sources are defined properly in the YARRRML/RML files, and that these sources refer to files that already exist, or will be available at the time of running the mapping, in the mapping package.
 
 *Important:* The path to the source files should be specified relative to the RML file(s). So, if the RML mapping files are in the transformation/mappings folder (as described above), then the sources they define should point to the `../../data/data.xml` file, respectively to the various `.json`, `.csv` and/or `.xml` files in the `./resources` folder
 
-#### Prepare vocabulary files, and other “dictionaries” that are to be used as resources for the mapping
+==== Prepare vocabulary files, and other “dictionaries” that are to be used as resources for the mapping
 
-####  Prepare test data
+====  Prepare test data
 
 TODO
 
-#### Write YARRRML Rules (optional)
+==== Write YARRRML Rules (optional)
 
-During the initial phase of our mapping creation process we started out writing the mapping rules in https://rml.io/yarrrml/spec/[YARRRML] (a human readable text-based representation for declarative generation rules), instead of RML, because it seemed simpler, and the end result was more human friendly. However, as we gained more experience and confidence in how the mappings should be defined, we realised that writing RML rules directly could be even more powerful, and we started to rewrite all our YARRRML mapping rules into RML. If this transition proves to be successful, and writing RML rules directly will be more convenient, our process will not require writing YARRRML rules in the future. This is the reason for why this step is optional. It could be useful for small test cases, quick demos, or showcases, and in cases when some people are more familiar with YARRRML than RML. If people decide to write YARRRML rules, the next step will become unnecessary, as the RML rules will be automatically generated from the YARRRML rules, using link:cli-toolchain.adoc[dedicated tools] that were developed for this purpose.
+During the initial phase of our mapping creation process we started out writing the mapping rules in https://rml.io/yarrrml/spec/[YARRRML] (a human readable text-based representation for declarative generation rules), instead of RML, because it seemed simpler, and the end result was more human friendly. However, as we gained more experience and confidence in how the mappings should be defined, we realised that writing RML rules directly could be even more powerful, and we started to rewrite all our YARRRML mapping rules into RML. If this transition proves to be successful, and writing RML rules directly will be more convenient, our process will not require writing YARRRML rules in the future. This is the reason for why this step is optional. It could be useful for small test cases, quick demos, or showcases, and in cases when some people are more familiar with YARRRML than RML. If people decide to write YARRRML rules, the next step will become unnecessary, as the RML rules will be automatically generated from the YARRRML rules, using xref:cli-toolchain.adoc[dedicated tools] that were developed for this purpose.
 
 Since this step is optional, we will not describe in detail the individual issues that need to be worked on, but they are in principle the same as the ones described in the next section.
 
 [#_write_rml_rules]
-#### Write RML rules
-If in the previous step we have defined the mapping rules in YARRRML, then this step consists of the simple action of executing link:cli-toolchain.adoc[the tool that generates RML out of YARRRML].
+==== Write RML rules
+If in the previous step we have defined the mapping rules in YARRRML, then this step consists of the simple action of executing xref:cli-toolchain.adoc[the tool that generates RML out of YARRRML].
 
 Regardless of which file we chose to define manually, the YARRRML or the RML, at the end of this step we will need to have an RML mapping file that should be able to convert an XML notice into a corresponding RDF graph.
 
@@ -116,22 +116,22 @@ Regardless of which file we chose to define manually, the YARRRML or the RML, at
 
 The technical mappings are written in the https://rml.io/[RML mapping language]. The version of RML used is https://github.com/julianrojas87/rmlmapper-java[5.0.0-r362], which was recommended to us by Julian Rojas, its principal developer, in which the https://www.w3schools.com/xml/xpath_intro.asp[XPath] version https://www.w3.org/TR/xpath-31/[3.1] is supported.
 
-##### prefix definition
+===== prefix definition
 
 To specify the technical mappings in RML, we start with the definition of the prefixes that are used in the mapping file. For example for the ePO ontology, we would define the epo prefix name as follows:
 
-```
+----
 @prefix epo: <http://data.europa.eu/a4g/ontology#> .
 
-```
+----
 
 The prefix names and their values, which are used in the RML file, should be ALL maintained in the https://github.com/meaningfy-ws/ted-sws/blob/feature/TED-311/ted_sws/resources/prefixes/prefixes.json[`prefixes.json`] resource file. If the content of that file is maintained and kept up to date properly, the entire prefix declaration section of the RML file could be automatically generated, and re-generated when necessary. (Note: Besides the individual prefixes, please also check out the array that is the assigned value to the `rml_rules` key).
 
-##### TriplesMap
+===== TriplesMap
 
 The next step after the definition of prefixes, is to define the various TriplesMaps to create class instances. For example, let's see an organisation's technical mapping.
 
-```
+----
 <#OrganisationMapping> a rr:TriplesMap ;
    rml:logicalSource
        [
@@ -140,21 +140,22 @@ The next step after the definition of prefixes, is to define the various Triples
            rml:iterator "/TED_EXPORT/FORM_SECTION/F03_2014/CONTRACTING_BODY/ADDRESS_CONTRACTING_BODY" ;
 
        ] ;
-```
+----
 
 The TriplesMap of this organisation is called “OrganisationMapping”, this name is a unique reference which is used to generate the rdf dataset and also used to refer to it  in the others mappings.
 
 A TripleMap has:
 
 1.  `rml:logicalSource` : containing the source (it can be the xml notice that we are transforming, or a CSV/JSON file containing the controlled values)
-1. `rml:referenceFormulation` : defining the parser for the file. In the case of the XML notices we are using XPath, while for the CSV/JSON files we are using `ql:CSV/ql:JsonPath`
-1. `rml:iterator` : the path were the RML mapping starts iterating for this Organisation mappings
 
-##### SubjectMap
+2. `rml:referenceFormulation` : defining the parser for the file. In the case of the XML notices we are using XPath, while for the CSV/JSON files we are using `ql:CSV/ql:JsonPath`
+3. `rml:iterator` : the path were the RML mapping starts iterating for this Organisation mappings
+
+===== SubjectMap
 
 The subjectMap describes how to generate a unique subject value of a TriplesMap (e.g. Organisation).
 
-```
+----
  rr:subjectMap
        [
            rr:template
@@ -162,7 +163,7 @@ The subjectMap describes how to generate a unique subject value of a TriplesMap 
            rr:class epo:Organisation
 
        ] ;
-```
+----
 
 
 The subject should be unique to each different organisation that we find in a XML notice. To do that, we are using a concatenation of
@@ -174,11 +175,11 @@ The subject should be unique to each different organisation that we find in a XM
 
 This solution also helps us to handle the case of having nested tags by giving each of them a different uuid thanks to the result of the position XPath function.
 
-##### predicatObjectMap
+===== predicatObjectMap
 
 A nested set of predicates objects map to each predicate/object of the organisation instance.
 
-```
+----
 rr:predicateObjectMap
    [
    rr:predicate epo:hasName ;
@@ -187,23 +188,23 @@ rr:predicateObjectMap
                rml:reference "OFFICIALNAME"
            ]
    ] ;
-```
+----
 
 In this part of a TriplesMap we find two components:
 
 1. A predicate `rr:predicate epo:hasName` ;
-1. An objectMap. It can be
+2. An objectMap. It can be
 .. a rml:reference which is the XPath (starting from the iterator) into the XML notice corresponding to the value of the predicate (OFFICIALNAME) or
 .. a rml:template that contains a combination of string and XPath expression
 
-##### Refer to other mappings
+===== Refer to other mappings
 
 A referencing object map allows using the subjects of another triples map as the objects generated by a predicate-object map.
 We have two use cases of connecting two TriplesMaps by using the `rr:parentTriplesMap` pattern
 
 * A referencing object map is represented by a resource that: has exactly one `rr:parentTriplesMap` property (without joint condition). Here is an example of connecting our Organisation to its ContactPoint
 
-```
+----
 rr:predicateObjectMap
    [
        rr:predicate epo:hasDefaultContactPoint ;
@@ -213,11 +214,11 @@ rr:predicateObjectMap
            ] ;
    ] ;
 
-```
+----
 
 * A referencing object map is represented by a resource that: many `rr:parentTriplesMap` properties (we use a `rr:joinCondition`). Here is an example of connecting an Address to its NUTS code
 
-```
+----
 rr:predicateObjectMap
    [
        rr:predicate locn:adminUnitL1 ;
@@ -231,7 +232,7 @@ rr:predicateObjectMap
            ] ;
    ] ;
 
-```
+----
 
 A join condition is represented by a resource that has exactly one value for each of the following two properties:
 
@@ -241,7 +242,7 @@ A join condition is represented by a resource that has exactly one value for eac
 
 TODO: Ask Ibrahim to help provide some items and text snippets about the various technical mapping aspects that are challenging, interesting, or where multiple solutions were possible and certain design decisions have been taken, for example, the generation of UUID, using external files for controlled values, handling repeatable/nested tags, etc.
 
-### Document technical and philosophical issues
+=== Document technical and philosophical issues
 
 While writing the mapping rules, make sure to document any issues that you are not able to solve, or that raise interesting questions, in the https://docs.google.com/document/d/1nnvD6XXYPSDzv_VukDHswzYKd_-PDUMe7E-kUGHNcc8/edit?usp=sharing[Observations/Questions about mapping generation] Google doc. If warranted, a Jira task should be also created to address the given issue.
 
