--- a/docs/antora/modules/ROOT/pages/technical-mapping-modularisation.adoc
+++ b/docs/antora/modules/ROOT/pages/technical-mapping-modularisation.adoc
@@ -1,5 +1,5 @@
 [#_rml-modules-chaper]
-### Create RML Rules Modules
+=== Create RML Rules Modules
 Forms tend to have sections, that are similar or identical i.e. represent the same information. For example form F03 and F06 have the same section 1 which is the information about the contract authority.
 
 In order to not write transformation rules twice (for section 1 of F03 and section 1 of F06), we have set up a module system which consists of writing transformation rules that are reusable by several forms. This gives us the following advantages:
@@ -9,8 +9,8 @@ In order to not write transformation rules twice (for section 1 of F03 and secti
 * In the case of an update of the ePO ontology, we will have to make the modification only once within the modules concerned by modification which will be passed on to all the forms.
 
 
-As explained in link:mapping-creation-method.adoc[technical mappings' creation], a TripleMAp represent a mapping of an XML element and its content with one class on the ontology and a set of its predicates objects. In order to have a module that can be reused on many forms we only define in this modules files the predicates objects of a TripleMap. , the logical sources and subjects map are described seperately in the main file as they contain specific information of forms.  For example a module that contain an organisation looked like that:
-```
+As explained in xref:mapping-creation-method.adoc[technical mappings' creation], a TripleMAp represent a mapping of an XML element and its content with one class on the ontology and a set of its predicates objects. In order to have a module that can be reused on many forms we only define in this modules files the predicates objects of a TripleMap. , the logical sources and subjects map are described seperately in the main file as they contain specific information of forms.  For example a module that contain an organisation looked like that:
+----
 <#OrganisationMapping> a rr:TriplesMap ;
     rr:predicateObjectMap
        [
@@ -21,12 +21,12 @@ As explained in link:mapping-creation-method.adoc[technical mappings' creation],
                ]
        ] ;
 
-```
+----
 
 This module is extended in the main file of F03 by adding the logicalSource and the SubjectMap in this way:
 
 
-```
+----
 <#OrganisationMapping> a rr:TriplesMap ;
    rml:logicalSource
        [
@@ -42,7 +42,7 @@ This module is extended in the main file of F03 by adding the logicalSource and 
            rr:class epo:Organisation
 
        ] ;
-```
+----
 The modules are stored on the ted-sws-artefact project in the src folder.
 For the moment we covered five modules that represent the five sections of F03 and part of F06/F25. The modules are:
 
@@ -54,7 +54,7 @@ For the moment we covered five modules that represent the five sections of F03 a
 
 The project contains one src folder containing all the modules files and one main file per form package. Here a representation:
 
-```
+----
 /ted-sws-artefacts
     /XXX
     /mappings
@@ -74,6 +74,6 @@ The project contains one src folder containing all the modules files and one mai
         s4_procedure.rml.ttl
         s5_award_of_contract.rml.ttl
         s6_complementary_information.rml.ttl
-```
+----
 
 
