updated github action trigger

--- a/docs/antora/modules/ROOT/pages/mapping-suite-structure.adoc
+++ b/docs/antora/modules/ROOT/pages/mapping-suite-structure.adoc
@@ -21,10 +21,9 @@ The structure of an example mapping package folder structure is presented below:
 /package_Fxx
 	/transformation
 		conceptual_mappings.xlsx
-		technical_mappings.yarrrml.yaml # (optional) manually created
+		technical_mappings.yarrrml.yaml
 		/mappings
-			*.rml.ttl # transformation rule(s); e.g. mappings.rml.ttl; referenced source is “../../data/source.xml”
-
+			*.rml.ttl
         /resources
 			*.json, *.xml, *.csv
 	/test_data
