--- a/docs/antora/modules/ROOT/partials/methodology/mapping-lifecycle.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/mapping-lifecycle.adoc
@@ -1,5 +1,6 @@
-[#_mapping-lifecycle-chaper]
+//[#_mapping-lifecycle-chaper]
 == Mapping development lifecycle
+:page-partial:
 
 The purpose of this section is to provide a high-level overview of the mapping development lifecycle before the mapping suites are ready to be used for transformation in production settings.
 
@@ -8,7 +9,7 @@ The diagram in <<mapping-lifecycle>> describes the complete mapping development 
 [#mapping-lifecycle]
 .Mapping development lifecycle
 [reftext="Figure {counter:figure}",align="center"]
-image::maping_development_lifecycle.png[width=100%]
+image::maping_development_lifecycle.png[]
 
 The process starts by **deciding which notice type to map**. The notice classification scheme currently considered are the https://simap.ted.europa.eu/web/simap/standard-forms-for-public-procurement["standard forms"] and the https://simap.ted.europa.eu/web/simap/eforms["eForms"]. In the future, however, it is likely that new classification schemes will follow.
 
