--- a/docs/antora/modules/ROOT/pages/index.adoc
+++ b/docs/antora/modules/ROOT/pages/index.adoc
@@ -5,3 +5,7 @@ The https://github.com/meaningfy-ws/ted-sws-artefacts[TED-SWS artefacts] are mai
 Also, xref:preparing-test-data.adoc[carefully selected sample data] are available for testing the mapping correctness and completeness.
 
 To implement the mapping suite xref:methodology.adoc[a methodology] has been established.
+
+.Mapping development lifecycle
+[reftext="Figure {counter:figure}",align="center"]
+image::maping_development_lifecycle.png[]
