--- a/docs/antora/modules/ROOT/nav.adoc
+++ b/docs/antora/modules/ROOT/nav.adoc
@@ -1,5 +1,6 @@
-* xref:mapping-priorities.adoc[Mapping priorities]
+//* xref:mapping-priorities.adoc[Mapping priorities]
 * xref:methodology.adoc[Methodology]
 * xref:mapping-suite-structure.adoc[Mapping Suite anatomy]
 * xref:repository-structure.adoc[Repository structure]
 * xref:cli-toolchain.adoc[Toolchain]
+* xref:preparing-test-data.adoc[Data sampling]
