--- a/docs/antora/modules/ROOT/pages/index.adoc
+++ b/docs/antora/modules/ROOT/pages/index.adoc
@@ -4,5 +4,5 @@ The https://github.com/meaningfy-ws/ted-sws-artefacts[TED-SWS artefacts] are mai
 
 Also, xref:preparing-test-data.adoc[carefully selected sample data] are available for testing the mapping correctness and completeness.
 
-To implement the mapping suite xref:methodology.adoc[a methodology] has been established.
+We foresee to map all standard forms and then eForms according to xref:mapping-priorities.adoc[this plan, prioritising some form number over other ones]. In order to be consistent in our approach, we also have established a mapping xref:methodology.adoc[methodology].
 
