--- a/docs/antora/modules/ROOT/pages/methodology.adoc
+++ b/docs/antora/modules/ROOT/pages/methodology.adoc
@@ -13,7 +13,11 @@ include::partial$methodology/mapping-lifecycle.adoc[]
 
 include::partial$methodology/key-elements-for-mapping.adoc[]
 
+include::partial$methodology/conceptual-mapping-structure.adoc[]
+
 include::partial$methodology/mapping-creation-method.adoc[]
+
+include::partial$methodology/technical-mapping-modularisation.adoc[]
 
 
 
