--- a/docs/antora/modules/ROOT/partials/methodology/mapping-creation-method.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/mapping-creation-method.adoc
@@ -2,7 +2,7 @@
 
 The purpose of this section is to give a high-level overview of the process that we follow to create the mapping rules that are used to transform TED notices available as XML files into RDF triples that use ePO terms.
 
-The methodology that we describe here, focuses on a few steps and artefacts that are at the core of the diagram depicted in <<mapping-creation>>. This diagram shows only a part of the xref:mapping-lifecycle.adoc#mapping-lifecycle[mapping lifecycle].
+The methodology that we describe here, focuses on a few steps and artefacts that are at the core of the diagram depicted in <<mapping-creation>>. This diagram shows only a part of the xref:partial$methodology/mapping-lifecycle.adoc[mapping lifecycle].
 
 [#mapping-creation]
 .Mapping creation steps in the development lifecycle
