--- a/docs/antora/modules/ROOT/pages/cli-toolchain.adoc
+++ b/docs/antora/modules/ROOT/pages/cli-toolchain.adoc
@@ -1,8 +1,10 @@
 == Toolchain used in the mapping development process
 
-The mapping artefacts, including the various mapping suite packages that are being developed by the process described in this document, are stored and maintained in the https://github.com/meaningfy-ws/ted-sws-artefacts[meaningfy-ws/ted-sws-artefacts] Github repository.
+The mapping artefacts, including the various mapping suite packages that are being developed by the process described in this document, are stored and maintained in the https://github.com/meaningfy-ws/ted-sws-artefacts[meaningfy-ws/ted-sws-artefacts] GitHub repository.
 
-There are a number of tools (mostly CLIs) available in the https://github.com/meaningfy-ws/ted-sws[meaningfy-ws/ted-sws] GitHub repository that can be run on these mapping suites to process them in various ways. In order to run these CLIs the ted-sws project needs to be installed in the ted-sws-artefacts environment. This can be done by following the instructions provided https://github.com/meaningfy-ws/ted-sws#installation[here]. After the installation the following CLIs will be available (the name of the tools to be executed on the command line are specified in parentheses):
+To assist the semantic engineers in the development of mapping suites a toolchain has been developed. There are a number of command line tools (CLIs) available in the https://github.com/meaningfy-ws/ted-sws[meaningfy-ws/ted-sws] GitHub repository that can be run on these mapping suites to process them in various ways. In order to run these CLIs the ted-sws project needs to be installed in the ted-sws-artefacts environment. This can be done by following the *installation instructions* provided https://github.com/meaningfy-ws/ted-sws#installation[here].
+
+After the installation the following CLIs will be available (the name of the tools to be executed on the command line are specified in parentheses).
 
 === SPARQL Test Generator (sparql_generator)
 
