--- a/docs/antora/modules/ROOT/nav.adoc
+++ b/docs/antora/modules/ROOT/nav.adoc
@@ -1,6 +1,6 @@
 //* xref:mapping-priorities.adoc[Mapping priorities]
-* xref:methodology.adoc[Methodology]
-* xref:mapping-suite-structure.adoc[Mapping Suite anatomy]
 * xref:repository-structure.adoc[Repository structure]
+* xref:mapping-suite-structure.adoc[Mapping suite anatomy]
+* xref:methodology.adoc[Methodology]
 * xref:cli-toolchain.adoc[Toolchain]
-* xref:preparing-test-data.adoc[Data sampling]
+* xref:preparing-test-data.adoc[Data samples]
