--- a/docs/antora/modules/ROOT/partials/methodology/key-elements-for-mapping.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/key-elements-for-mapping.adoc
@@ -2,6 +2,8 @@
 ==  Key elements involved in the mapping process
 In this section we will provide descriptions and references to the key elements (concepts or resources) that are involved in the creation of mappings or the mapping process itself.
 
+Based on the documents described in the previous subsections (i.e. the mapping input, the output of the mapping, and the additional resources) the purpose of the mapping process is to generate a “mapping table” (contained in the xref:partial$methodology/conceptual-mapping-structure.adoc[conceptual mapping artefact]) that can be processed by an automated workflow of the https://github.com/meaningfy-ws/ted-sws[TED-SWS system] to “execute” these mappings in order to convert the TED XML input data into an ePO conformant RDF graph (the output of the mapping). This “mapping table” will be encoded as a spreadsheet, with multiple worksheets, whose structure is described elsewhere.
+
 
 === Notices to be mapped
 
