--- a/docs/antora/modules/ROOT/partials/methodology/key-elements-for-mapping.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/key-elements-for-mapping.adoc
@@ -45,5 +45,5 @@ The output of the XML notice transformation will be an *RDF graph* instantiating
 
 The key element enabling transformation automation are the mapping files: *conceptual* and *technical* mappings. They are developed according to the xref:mapping-creation-method.adoc[mapping creation methodology].
 
-The mappings rules are organised in mapping suites, described xref:mapping-suite-structure.adoc[here].
+The mapping rules are organised in mapping suites, described xref:mapping-suite-structure.adoc[here].
 
