--- a/docs/antora/modules/ROOT/partials/methodology/technical-mapping-modularisation.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/technical-mapping-modularisation.adoc
@@ -1,14 +1,15 @@
+[#technical-mapping-modularisation-chapter]
 === Create RML Rules Modules
-Forms tend to have sections, that are similar or identical i.e. represent the same information. For example form F03 and F06 have the same section 1 which is the information about the contract authority.
+Forms tend to have similar or identical sections i.e. represent the same information. For example form F03 and F06 have the same section 1 which is the information about the contract authority.
 
 In order to not write transformation rules twice (for section 1 of F03 and section 1 of F06), we have set up a module system which consists of writing transformation rules that are reusable by several forms. This gives us the following advantages:
 
 * Not to rewrite several times the same rules for several forms (avoid duplication of rules).
 
-* In the case of an update of the ePO ontology, we will have to make the modification only once within the modules concerned by modification which will be passed on to all the forms.
+* In the case of an update of the ePO ontology, we will have to implement the modification only once within the modules concerned by modification which will be passed into all the forms.
 
 
-As explained in xref:partial$methodology/mapping-creation-method.adoc[technical mappings' creation], a TripleMAp represent a mapping of an XML element and its content with one class on the ontology and a set of its predicates objects. In order to have a module that can be reused on many forms we only define in this modules files the predicates objects of a TripleMap. , the logical sources and subjects map are described seperately in the main file as they contain specific information of forms.  For example a module that contain an organisation looked like that:
+As explained in xref:partial$methodology/mapping-creation-method.adoc[technical mappings creation], a TripleMap represent a mapping of an XML element and its content with one class in the ontology and a set of its predicates objects. In order to have a module that can be reused on many forms we only define in this modules files the predicates objects of a TripleMap. , the logical sources and subjects map are described seperately in the main file as they contain specific information of forms.  For example a module that contain an organisation looked like that:
 
 ----
 <#OrganisationMapping> a rr:TriplesMap ;
@@ -44,7 +45,7 @@ This module is extended in the main file of F03 by adding the logicalSource and 
        ] ;
 ----
 
-The modules are stored on the ted-sws-artefact project in the src folder.
+The modules are stored in the ted-sws-artefact project in the src folder.
 For the moment we covered five modules that represent the five sections of F03 and part of F06/F25. The modules are:
 
 * s1_contracting_authority.rml.ttl
