Documentation: long link handling

--- a/docs/antora/modules/ROOT/partials/methodology/key-elements-for-mapping.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/key-elements-for-mapping.adoc
@@ -27,7 +27,7 @@ https://drive.google.com/drive/folders/120iLgw1owyg5_5S5PAfw95yvz5NMaeCF[link]
 |Test data set by Everis|A set of approx. 300 XML files (6 batches of about 50 files each, for the forms F02, F03, F05, F06, F24 and F25) https://drive.google.com/drive/folders/16Qe5x49PbktdQxgY5TU5XnCEd7rxqaCl[link]
 |RDF results by Everis|Just for reference. Various parts might be out of date. https://drive.google.com/drive/folders/1T44VXXQ74_shOtsZta2NbjX4AnYtk14W[link]
 |XML Data analysis|Contains various tables, each summarising certain aspects  (e.g. XML elements related to certain fields in the form) of the data extracted from test notice files. https://docs.google.com/spreadsheets/d/1EoHUDDjvx62wXa-LKnDkvolN6dVIeZ_rgm3nNZ91gQo[link]
-|XML Elements to Vocabulary Mapping|https://docs.google.com/spreadsheets/d/13uU5IO_lVfyq8DFed6Wl48gAlHjsnetLnHEotgdWOL4/edit#gid=0[https://docs.google.com/spreadsheets/d/13uU5IO_lVfyq8DFed6Wl48gAlHjsnetLnHEotgdWOL4/edit#gid=0]
+|XML Elements to Vocabulary Mapping|https://docs.google.com/spreadsheets/d/13uU5IO_lVfyq8DFed6Wl48gAlHjsnetLnHEotgdWOL4/edit#gid=0[link]
 |TED Mappings to ePO terms| https://github.com/OP-TED/ePO/tree/master/analysis_and_design/ted_mappings[ted_mappings]
 |conventions_report.html|Overview of ePO Terms generated from the UML model. https://github.com/OP-TED/ePO/blob/feature/model-refactoring/analysis_and_design/transformation_output/owl_ontology/conventions_report[conventions_report] (to be checked out and open in a browser)
 |===
