--- a/docs/antora/modules/ROOT/partials/methodology/mapping-creation-method.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/mapping-creation-method.adoc
@@ -139,7 +139,7 @@ This step is about making sure that all necessary sources are defined properly i
 
 ====  Prepare test data
 
-Test data (XML notices) are the main input of our process pipline. To now how he are preparing them please se the xref:preparing-test-data.adoc[dedicated chapter].
+Please refer to the xref:preparing-test-data.adoc[representative sample data selection chapter].
 
 ==== Write YARRRML Rules (optional)
 
